@@ -12,6 +12,9 @@ What's New in Python 3.3.2?
 Core and Builtins
 -----------------
 
+- Issue #17927: Frame objects kept arguments alive if they had been copied into
+  a cell, even if the cell was cleared.
+
 - Issue #17237: Fix crash in the ASCII decoder on m68k.
 
 - Issue #17408: Avoid using an obsolete instance of the copyreg module when
